Fix sneaky guava